oscar-base packages.
- Increase the timeout to 9s when getting repository information.
- [Ticket #398] We can now check whether the binary packages specified for the
creation of a image are actually available or not. For that, one just needs to
use the "oscar --distro <DISTRO_ID> --check-packagelist <FILE>" command.
- Clean-up the prereq management and the bootstrapping mechanisms.

6.0.2:
- Fix the oscar_image_cleanup script.
- Include mirroring capabilities for yum repositories.
- Update the list of binary packages installed in all Debian based images.
- Fix various issues with the SIS api-post-image script.
- Correctly generate the /etc/c3.conf file.
- Make sure the node deletion does not fail when we do not have connectivity
with compute nodes.
- Fix various issues with the ODA api-pre-install script.
- Fix a bootstrap issue: the API side of all core packages is now
automatically installed.
- Fix different buggy corner cases when creating images.
- Fix a bug when OSCAR updates the /etc/hosts file.
- Update the image creation parameters so we can overwrite the list of binary
packages to install in a image for a given Linux distribution.
- Move Selector code to the Selector package source tree.
- Add "OSCAR::ClientMgt::cleanup_clients()" function that cleans the system up
regarding clients definition. The function is currently used only before the
definition of clients, to be sure we won't face any problems during the actual
clients creation.
- Add an "experimental" package set.
- [Ticket #483] Remove code duplication between MAC.pm and MACops.pm.
- [Ticket #519] Re-introduce the startover capability (via oscar-config
--startover command).
- Add the mysql support to OS_Settings and OSCAR::SystemServices.
- Fix a problem when detecting the NIC used by OSCAR in the network-check
script.
- Improve unit tests.
- Fix a bug in OS_Settings when falling back to the default settings.
- Update Configurator to 1.0.1.
- Update Yume to 2.8.8.
- Update RAPT to 2.8.4.