@@ -15,6 +15,7 @@ oscar-base packages.
 creation of a image are actually available or not. For that, one just needs to
 use the "oscar --distro <DISTRO_ID> --check-packagelist <FILE>" command.
 - Clean-up the prereq management and the bootstrapping mechanisms.
+- Correctly detect Debian Lenny.
 
 6.0.2:
 - Fix the oscar_image_cleanup script.
